feat: 마일스톤이 가진 열린, 닫힌 이슈들과 작업률을 반환하는 로직 구현